# SOTA-FR-MODEL-TRANING-

./: .gitignore  README.md  losses.py  lr_scheduler.py  pyproject.toml  train.py  train_scale_fr.py
configs/: adaface_r100_bupt.py  arcface_r100_bupt.py  scale_fr_r50.py  scale_fr_r50_bupt.py
scale_fr/: __init__.py  fisher_projector.py  losses.py  memory_bank.py
utils/: bupt_cbface_to_lmdb.py
