[project]
name = "sota-fr-train-and-test"
version = "0.1.0"
description = "Scripts for training and testing state-of-the-art face recognition models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "easydict>=1.10",
    "lmdb>=1.4.1",
    "matplotlib>=3.7.1",
    "msgpack>=1.0.5",
    "opencv-python>=4.7.0",
    "pandas>=2.0.1",
    "pickleshare>=0.7.5",
    "tornado>=6.3.2",
    "tqdm>=4.65.0",
    "timm>=0.9.0",
    "tensorboard>=2.13.0",
    "imageio>=2.31.0",
    "scikit-learn>=1.2.2"
]

[tool.uv]
managed = true
package = false
